[DOC] thesis: support vector and support theorem

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -194,6 +194,49 @@ $$\theta_{i} = i \cdot \Delta \theta$$
 
 где $\Delta \theta = \frac{2 \pi}{M}, i = 0, \ldots, M - 1, M \leq 5$
 
+Ключевым понятием в статье является следующее
+
+\begin{flushleft}
+ \textbf{Определение}. \textbf{Набором опорных чисел}
+ $(h_{0}, h_{1}, \ldots, h_{M - 1})^{T}$выпуклого тела $K$ по заданному набору
+ направлений $u_{i}, i = 0, \ldots, M - 1$ называется называется вектор в
+ $\mathbb{R}^{M}$, составленный из значений опорной функции по соответствующим
+ направлениям: $(h_{K}(u_{0}), h_{K}(u_{1}), \ldots, h_{K}(u_{M - 1}))^{T}$.
+\end{flushleft}
+
+Основным теоретическим результатом статьи, на котором основаны все алгоритмы,
+является соедующая
+
+\begin{flushleft}
+ \textbf{Теорема 1}. \textbf{Опорная теорема}
+
+  Набор действительных чисел $h \in \mathbb{R}^{M}, M \leq 5$ является набором
+  опорных чисел тогда и только тогда, когда
+  
+  $$h^{T} C \leq (0, \ldots, 0)$$
+  
+  где $C$ -- $M \times M$ матрица, заданная следующим образом:
+  
+  $$
+  C = 
+  \left(
+  \begin{array}{ccccccc}
+  1 & -k &  0 & \ldots & 0 & 0 & -k \\
+ -k &  1 & -k & \ldots & 0 & 0 &  0 \\
+  0 & -k &  1 & \ldots & 0 & 0 & 0 \\
+  \vdots & \vdots & \vdots & \ddots & \vdots & \vdots & \vdots \\
+  0 & 0 & 0 & \ldots & 1 & -k & 0 \\
+  0 & 0 & 0 & \ldots & -k & 1 & -k \\
+ -k & 0 & 0 & \ldots & 0 & -k & 1 \\
+ \end{array}
+ \right)
+  $$
+  
+  где $k = 1 / (2 cos(\frac{2 \pi}{M}))$.
+
+\end{flushleft}
+
+
 \section{Предлагаемый подход}
 
 \newpage
