[DOC] thesis: add generak info about problems in LeleKW92

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -249,6 +249,21 @@ $\mathbb{R}^{M}$.
  $$
 \end{flushleft}
 
+Дальнейшая часть статьи посвящена, собственно, нахождению такой точки 
+$h \in \mathbb{R}^{M}$ в
+опорном конусе (т. е. такого набора чисел, который является набором опорных
+чисел), который бы соответствовал следующим критериям:
+
+\begin{enumerate}
+ \item Расстояние от $h$ до вектора $y \in \mathbb{R}^{M}$, полученного из
+измерений, минимально
+ \item Потроенное по набору опорных чисел выпуклое тело соответствует
+известной априорной информации об объекте.
+\end{enumerate}
+
+Под априорной информаций во втором пункте подразумевается, например, известное
+положение центра масс вершин полученного многоугольника, или тот факт, что
+поверхность тела обладает гладкостью (далее это понятие будет разъяснено).
 
 
 \section{Предлагаемый подход}
