[ODC] thesis: Remove wrong usage of package dvips
It causes the following error during the build on my home PC:
TODO: Check the build on work PC.

! Package hyperref Error: Wrong DVI mode driver option `dvips',
(hyperref)                because pdfTeX or LuaTeX is running in PDF mode.

See the hyperref package documentation for explanation.

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -21,7 +21,7 @@
 % The following code enables back references:
 \usepackage{color} 
 \definecolor{darkgreen}{rgb}{0,.5,0} 
-\usepackage[unicode,colorlinks,filecolor=blue,citecolor=darkgreen,dvips,pagebackref]{hyperref}
+\usepackage[unicode,colorlinks,filecolor=blue,citecolor=darkgreen,pagebackref]{hyperref}
 
 
 %opening
