[DOC] thesis: Add formula for eigenvalues of C

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -268,6 +268,18 @@ $h \in \mathbb{R}^{M}$ в
 положение центра масс вершин полученного многоугольника, или тот факт, что
 поверхность тела обладает гладкостью (далее это понятие будет разъяснено).
 
+Прежде всего в статье приводится детальный анализ опорного конуса -- множества,
+на котором производится минимизация функционала. Поскольку матрица $C$
+циклическая, ее собственные числа можно получить при помощи дискретного
+преобразования Фурье ее первой строки (TODO: обосновать). А именно, они равны
+
+$$
+\lambda_{k} = 1 - \frac{cos(2 \pi (k - 1) / M)}{cos(2 \pi / M)},
+k = 1, \ldots, M
+$$
+
+
+
 
 \section{Предлагаемый подход}
 
