[DOC] thesis: add formula for nullspace of C

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -278,7 +278,22 @@ $$
 k = 1, \ldots, M
 $$
 
+Очевидно, что ровно два собственных значения являются нулевыми:
+$\lambda_{2} = \lambda_{M} = 1 - \frac{cos(2 \pi / M)}{cos(2 \pi / M)} = 0$.
+Следовательно, матрица $C$ является сингулярной и ее ядро есть двумерное
+подпространство, имеющее следующие базисные векторы:
 
+$$
+n_{1} = (1, cos(\theta_{0}), cos(2 \theta_{0}), \ldots,
+cos((M - 1) \theta_{0}))^{T}
+$$
+
+$$
+n_{2} = (0, sin(\theta_{0}), sin(2 \theta_{0}), \ldots,
+sin((M - 1) \theta_{0}))^{T}
+$$
+
+где $\theta_{0} = 2 \pi / M$.	
 
 
 \section{Предлагаемый подход}
