[DOC] thesis: Use gothic letter C for set notation

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -248,7 +248,7 @@ $\mathbb{R}^{M}$.
  \textbf{Определение}. \textbf{Опорным конусом} размерности $M$ называется
  множество:
  $$
- C = \{h \in \mathbb{R}^{M} | h^{T} C \leq (0 \ldots 0) \}
+ \mathfrak{C} = \{h \in \mathbb{R}^{M} | h^{T} C \leq (0 \ldots 0) \}
  $$
 \end{flushleft}
 
