[DOC] thesis: Add usage of gothic C

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -268,9 +268,9 @@ $h \in \mathbb{R}^{M}$ в
 положение центра масс вершин полученного многоугольника, или тот факт, что
 поверхность тела обладает гладкостью (далее это понятие будет разъяснено).
 
-Прежде всего в статье приводится детальный анализ опорного конуса -- множества,
-на котором производится минимизация функционала. Поскольку матрица $C$
-циклическая, ее собственные числа можно получить при помощи дискретного
+Прежде всего в статье приводится детальный анализ опорного конуса $\mathfrak{C}$
+-- множества, на котором производится минимизация функционала. Поскольку матрица
+$C$ циклическая, ее собственные числа можно получить при помощи дискретного
 преобразования Фурье ее первой строки (TODO: обосновать). А именно, они равны
 
 $$
