[DOC] thesis: add formula for support vector's components

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -280,8 +280,8 @@ $$
 
 Очевидно, что ровно два собственных значения являются нулевыми:
 $\lambda_{2} = \lambda_{M} = 1 - \frac{cos(2 \pi / M)}{cos(2 \pi / M)} = 0$.
-Следовательно, матрица $C$ является сингулярной и ее ядро есть двумерное
-подпространство, имеющее следующие базисные векторы:
+Следовательно, матрица $C$ является сингулярной и ее ядро $\mathfrak{N}$ есть
+двумерное подпространство, имеющее следующие базисные векторы:
 
 $$
 n_{1} = (1, cos(\theta_{0}), cos(2 \theta_{0}), \ldots,
@@ -293,8 +293,22 @@ n_{2} = (0, sin(\theta_{0}), sin(2 \theta_{0}), \ldots,
 sin((M - 1) \theta_{0}))^{T}
 $$
 
-где $\theta_{0} = 2 \pi / M$.	
+где $\theta_{0} = 2 \pi / M$.
 
+Геометрическим следствием этого факта является то, что конус $\mathfrak{C}$ не
+является правильным конусом, поскольку целиком сожержит в себе линейное
+подпространство размерности 2. Следовательно, опорный конус является декартвым
+произведением правильного конуса
+$\mathfrak{C}_{p} = {h \in \mathfrak{C} | h^{T} n_{1} = 0, h^{T} n_{2} = 0}$
+и ядра $\mathfrak{N}$ матрицы $C$. Соответственно, любой вектор, составленный из
+набора опорных чисел, является покомпонентной суммой ортогональных векторов
+$h_{p} \in \mathfrak{C}_{p}$ и $h_{n} \in \mathfrak{N}$:
+
+$$h = h_{p} + h_{n}$$
+
+Далее в статье показано, что компонента $h_{n}$ есть по сути плоскопараллельный
+сдвиг вектора $h$, составленного из набора опорных чисел в пространстве
+$\mathbb{2}$.
 
 \section{Предлагаемый подход}
 
