[DOC] thesis: add formula for biggest set

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -308,7 +308,20 @@ $$h = h_{p} + h_{n}$$
 
 Далее в статье показано, что компонента $h_{n}$ есть по сути плоскопараллельный
 сдвиг вектора $h$, составленного из набора опорных чисел в пространстве
-$\mathbb{2}$.
+$\mathbb{R}^{2}$.
+
+Пусть имеется некоторый фиксированный (согласованный) вектор $h$, составленный
+из набора опорных чисел. Тогда существует, вообще говоря, целое семейство
+выпуклых множеств на плоскости $\mathbb{R}^{2}$, для которых вектор $h$ является
+вектором опорных чисел. Наибольшее из из этих множеств $S_{B}$ определяется как
+пересечение полупространств, образованных опорными прямыми:
+
+$$
+S_{B} = \{u \in \mathbb{R}^{2} |
+u^{T} (\omega_{1} \omega_{2} \ldots \omega_{M}) \leq
+(h_{1} h_{2} \ldots h_{M})\}
+$$
+
 
 \section{Предлагаемый подход}
 
