[DOC] thesis: difference betwee PW and us

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -322,6 +322,16 @@ u^{T} (\omega_{1} \omega_{2} \ldots \omega_{M}) \leq
 (h_{1} h_{2} \ldots h_{M})\}
 $$
 
+Данное множество называется \textbf{главной целью} вектора опорных чисел $h$.
+
+В этом месте происходит разделение нашей задачи и той задачи, которую решают
+Prince и willsky в своей статье. А именно, Prince и Willsky полагают, что
+главная цель $S_{B}$ является наилучшей оценкой исходного тела. В следующих
+разделах будет показано, что в задаче восстановления, которую мы решаем,
+ключевую роль играет тот факт, что нам известна структура основных граней камня.
+
+
+
 
 \section{Предлагаемый подход}
 
