[DOC] thesis: add formula for shift vector

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -330,6 +330,57 @@ Prince и willsky в своей статье. А именно, Prince и Willsky
 разделах будет показано, что в задаче восстановления, которую мы решаем,
 ключевую роль играет тот факт, что нам известна структура основных граней камня.
 
+Допустим, что мы прибавляем вектор $h_{n} \in \mathfrak{N}$ из ядра матрицы $C$
+к опорному вектору $h$. Что тогда происходит с главной целью? Прежде всего,
+можно заметить, что $h_{n}$ можно записать в виде линейной комбинации базисных
+векторов пространства $\mathfrak{N}$:
+
+$$
+h_{n} = v_{1} \left(
+  \begin{array}{c}
+   n_{1, 1} \\
+   n_{1, 2} \\
+   \vdots \\
+   n_{1, M}
+  \end{array}
+  \right) + v_{2} \left(
+  \begin{array}{c}
+   n_{2, 1} \\
+   n_{2, 2} \\
+   \vdots \\
+   n_{2, M} \\
+  \end{array}
+  \right) = N v
+$$
+
+где $N = \left(
+     \begin{array}{cc}
+      n_{1, 1} & n_{2, 1} \\
+      n_{1, 2} & n_{2, 2} \\
+      \vdots & \vdots \\
+      n_{1, M} & n_{2, M} \\
+     \end{array}
+     \right)$ - матрица, столбцы которой составлены из координат базисных
+векторов, а
+$v = \left(
+     \begin{array}{c}
+      v_{1} \\
+      v_{2} \\
+     \end{array}
+     \right)$ - вектор-столбец, составленный из коэффициентов линейной
+комбинации. Далее, заметим, что главную цель $S_{B}$ опорного вектора
+$h = \left(
+  \begin{array}{c}
+   h_{1} \\
+   h_{2} \\
+   \vdots \\
+   h_{M} \\
+  \end{array}
+  \right)$ можно записать в следующем виде:
+
+$$
+S_{B} = \{u \in \mathbb{R}^{2} | N u \leq h\}
+$$
 
 
 
