[DOC] thesis: add end of shift proof

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -382,7 +382,17 @@ $$
 S_{B} = \{u \in \mathbb{R}^{2} | N u \leq h\}
 $$
 
+Теперь, прибавляя к неравенству $N u \leq h$ выражение для вектора
+$h_{n} = N v$, получаем:
 
+$$
+N (u + v) \leq h + h_{n}
+$$
+
+Таким образом, для каждого $u \in S_{B}$ вектор $u + v$ представляет собой
+элемент главной цели вектора $h + h_{n}$. Следовательно, главная цель вектора
+$h + h_{n}$ отличается от главной цели вектора $h$ плоскопараллельным сдвигом на
+фиксированный вектор $v$.
 
 \section{Предлагаемый подход}
 
