[DOC] thesis: add criteria of continuous support function

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -209,11 +209,30 @@ $$\theta_{i} = i \cdot \Delta \theta$$
  направлениям: $(h_{K}(u_{0}), h_{K}(u_{1}), \ldots, h_{K}(u_{M - 1}))^{T}$.
 \end{flushleft}
 
+Вектор, составленный из набора опорных чисел, является по сути аналогом
+непрерывной опорной функции. Если говорить более точно, опорный вектор есть
+сеточная функция, соответствующая непрерывной функции $h(\theta)$. Всякая ли
+непрерывная функция является опорной функцией некоторого выпуклого тела? Ответ
+на этот вопрос дает следующая теорема:
+
+\begin{flushleft}
+ \textbf{Теорема 1}. \textbf{Критерий опорной функции}.
+ 
+ Непрерывная функция $h : \mathbb{R} \to \mathbb{R}_{+}$ является опорной
+ функцией некоторого выпуклого тела тогда и только тогда, когда для всех
+ $\theta \in \mathbb{R}$ выполнено следующее неравенство:
+ 
+ $$
+ h''(\theta) + h(\theta) \geq 0
+ $$
+\end{flushleft}
+
+
 Основным теоретическим результатом статьи, на котором основаны все алгоритмы,
 является следующая
 
 \begin{flushleft}
- \textbf{Теорема 1}. \textbf{Опорная теорема}
+ \textbf{Теорема 2}. \textbf{Опорная теорема}
 
   Набор действительных чисел $h \in \mathbb{R}^{M}, M \leq 5$ является набором
   опорных чисел тогда и только тогда, когда
@@ -240,6 +259,13 @@ $$\theta_{i} = i \cdot \Delta \theta$$
   где $k = 1 / (2 cos(\frac{2 \pi}{M}))$.
 
 \end{flushleft}
+
+Важно также заметить сходство между условием для непрерывной опорной функции и
+условием для дискретного вектора, составленного из набора опорных чисел.
+Величина $ - h^{T} C$, компоненты которой должны быть неотрицательными, является
+по сути дискретным аналогом величины $h''(\theta) + h(\theta)$. Расширяя эту
+аналогию, авторы статьи приводят геометрическую интерпретацию компонент вектора
+$ - h^{T} C$ как дискретный радиус кривизны поверхности.
 
 Таким образом, все возможные наборы $h \in \mathbb{R}^{M}$ образуют конус в
 $\mathbb{R}^{M}$.
