[DOC] thesis: add formula for extreme points of basic object

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -410,7 +410,7 @@ $$
 
 Теперь, прибавляя к неравенству $N u \leq h$ выражение для вектора
 $h_{n} = N v$, получаем:
-
+  
 $$
 N (u + v) \leq h + h_{n}
 $$
@@ -419,6 +419,30 @@ $$
 элемент главной цели вектора $h + h_{n}$. Следовательно, главная цель вектора
 $h + h_{n}$ отличается от главной цели вектора $h$ плоскопараллельным сдвигом на
 фиксированный вектор $v$.
+
+Если дан вектор $h = (h_{1}, h_{2}, \ldots, h_{M})$, составленный из набора
+опорных чисел некоторого выпуклого тела, то можно явным образом вычислить
+координаты вершин главной цели этого вектора (главная цель всегда представляет
+собой многоугольник, вершины которого могут быть получены путем
+последовательного пересечения соседних опорных прямых):
+
+$$
+\nu_{i}^{T} = \frac{1}{sin \theta_{0}} (h_{i},  h_{i + 1})
+\left(
+  \begin{array}{cc}
+    sin \theta_{i + 1} & - cos \theta_{i + 1} \\
+    - sin \theta_{i} & cos \theta_{i} \\
+  \end{array}
+\right)
+$$
+
+Вершины главной цели опорного вектора называют \textbf{экстремальными вершинами}
+опорного вектора.
+
+
+
+
+
 
 \section{Предлагаемый подход}
 
