[DOC] thesis: add formula for extreme points mass center

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -437,9 +437,19 @@ $$
 $$
 
 Вершины главной цели опорного вектора называют \textbf{экстремальными вершинами}
-опорного вектора.
+опорного вектора. Примечательно, что центр масс всех экстремальных вершин,
+который по сути характеризует абсолютное положение выпуклого тела, представим
+в следующем виде:
 
-
+$$
+\overline{\nu} = \left(
+  \begin{array}{c}
+   \overline{\nu}_{x} \\
+   \overline{\nu}_{y} \\
+  \end{array}
+  \right) =
+  \frac{1}{M} \sum\limits_{i = 1}^{M} \nu_{i} = \frac{2}{M} N^{T} h
+$$
 
 
 
