[DOC] thesis: add note about a priori known mass center

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -451,6 +451,13 @@ $$
   \frac{1}{M} \sum\limits_{i = 1}^{M} \nu_{i} = \frac{2}{M} N^{T} h
 $$
 
+В данной статье авторы показывают, что данное выражение может быть использовано
+в качестве ограничения на опорные векторы -- если положение искомого тела
+известно заранее (\textit{a priori}). Заметим, что в частности, когда опорный
+вектор $h$ не имеет компоненты в пространстве $\mathfrak{N}$ -- ядре матрицы
+$C$, т. е. когда $h \in \mathfrak{C}_{p}$, тогда $N^{T} h = 0$ и, следовательно,
+$\overline{\nu} = 0$ -- центр масс главной цели расположен в начале координат.
+
 
 
 
