[DOC] thesis: add definition of descrete radius of curvature

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -458,6 +458,27 @@ $$
 $C$, т. е. когда $h \in \mathfrak{C}_{p}$, тогда $N^{T} h = 0$ и, следовательно,
 $\overline{\nu} = 0$ -- центр масс главной цели расположен в начале координат.
 
+\begin{figure}[ht]
+    \includegraphics[width=10cm]{images/dicrete-radius-curvature.jpg}
+    \caption{Иллюстрация к понятию дискретной кривизны.}
+    \label{dicrete-radius-curvature}
+\end{figure}
+
+Далее в авторы развивают идею \textbf{дискретного радиуса кривизны} -- величины,
+характеризующей гладкость поверхностей главных целей. Представим, что на
+рисунке \ref{dicrete-radius-curvature} некоторая материальная точка движется
+вдоль $i$-ой стороны многоугольника от экстремальной точки $\nu_{i - 1}$ до
+другой экстремальной точки $\nu_{i}$. Тогда во время этого движения вектор
+внешней нормали к поверхности меняет угол наклона на величину
+$\theta_{0} = \theta_{i} = \theta_{i - 1}$. При этом точка преодолевает
+расстояние, равное $f_{i}$. По аналогии с обычным радиусом кривизны,
+определяемом как скорость заметания дуги радиусом-вектором поверхности по
+отношению к углу наклона радиуса-вектора, авторы определяют дискретный радиус
+кривизны как
+
+$$
+r_{i} = \frac{f_{i}}{\theta_{0}}
+$$
 
 
 
