[DOC] thesis: vector of curvature radii

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -480,6 +480,25 @@ $$
 r_{i} = \frac{f_{i}}{\theta_{0}}
 $$
 
+Из геометрических соображений можно показать, что расстояние от точки $p_{i}$
+до прямой $L_{i}$ равно $\rho_{i} = -h^{T} c_{i}$, где $c_{i}$ -- $i$-й столбец
+матрицы $C$, а из простого тригонометрического соотношения следует, что
+
+$$
+f_{i} = \frac{2 \rho_{i}}{tg \theta_{0}}
+$$
+
+и, следовательно,
+
+$$
+\rho_{i} = \frac{1}{2} r_{i} \theta_{0} tg \theta_{0}
+$$
+
+Отсюда следует, что вектор $\rho = - h^{T} C$ состоит из элементов,
+пропорциональных дискретным радиусам кривизны $r_{i}$. При этом малые по
+величине элементы этого вектора соответствуют "острым" углам, а большие --
+"гладким". В дальнейшем авторы статьи испольуют это соображение в целях
+коструирования объекта, гладкость которого известна заранее.
 
 
 \section{Предлагаемый подход}
