[DOC] thesis: fix mistake in formula

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -470,7 +470,7 @@ $\overline{\nu} = 0$ -- центр масс главной цели распол
 вдоль $i$-ой стороны многоугольника от экстремальной точки $\nu_{i - 1}$ до
 другой экстремальной точки $\nu_{i}$. Тогда во время этого движения вектор
 внешней нормали к поверхности меняет угол наклона на величину
-$\theta_{0} = \theta_{i} = \theta_{i - 1}$. При этом точка преодолевает
+$\theta_{0} = \theta_{i} - \theta_{i - 1}$. При этом точка преодолевает
 расстояние, равное $f_{i}$. По аналогии с обычным радиусом кривизны,
 определяемом как скорость заметания дуги радиусом-вектором поверхности по
 отношению к углу наклона радиуса-вектора, авторы определяют дискретный радиус
