[DOC] thesis: add closest algorithm from PW

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -500,6 +500,50 @@ $$
 "гладким". В дальнейшем авторы статьи испольуют это соображение в целях
 коструирования объекта, гладкость которого известна заранее.
 
+Всего Prince и Willsky приводят в статье 3 алгоритма для реконструкции выпуклого
+тела по измерениям его опорной функции. При этом предполагается, что измерения
+опорной функции получаются как
+
+$$
+y_{i} = h_{i} + n_{i}, i = 1, \ldots, M
+$$
+
+где $h_{i}$ -- точные значения опорной функции, для которых требуется построить
+оценку, а $n_{i}$ -- статистические погрешности, которые представляют собой
+
+\begin{enumerate}
+ \item Либо независимые одинаково распределенные гауссовы величины с нулевым
+ средним и дисперсией $\sigma^{2}$
+ \item Либо независимые случайные величины, равномерно распределенные на отрезке
+ $[ - \gamma, \gamma]$.
+\end{enumerate}
+
+Вследствие наличия статистических погрешностей измерений нельзя утверждать, что
+набор $y = (y_{1}, \ldots, y_{M})$ представляют из себя согласованный набор
+опорных чисел. Поэтому первой задачей всех алгоритмов является построение
+согласованного набора. Следующей задачей является построение такого
+согласованного набора, который бы наилучшим образом соответствовал заранее
+известной информации об измеряемом объекте.
+
+\begin{flushleft}
+ \textbf{Алгоритм ближайшего набора}. В данном случае предполагается, что
+ статистическая погрешности представляют собой гауссовы величины. В случае,
+ когда отсутствует какая-либо информация об оцениваемом объекте, следует строить
+ оценку максимального правдоподобия вектора $h$ по вектору измерений $y$ при
+ условии, что $h \in \mathfrak{C}$:
+ 
+ $$
+ \widehat{h}_{C} = \widehat{h}_{ML} =
+ \operatornamewithlimits{argmax}_{h: h^{T} C \leq 0}
+ ( - \frac{1}{2} (y - h)^{T} (y - h))
+ $$
+\end{flushleft}
+
+\begin{flushleft}
+ \
+\end{flushleft}
+
+
 
 \section{Предлагаемый подход}
 
