[DOC] thesis: continue description of closest algorithm

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -537,10 +537,18 @@ $$
  \operatornamewithlimits{argmax}_{h: h^{T} C \leq 0}
  ( - \frac{1}{2} (y - h)^{T} (y - h))
  $$
+ 
+ Очевидно, что данная оценка предоставляет такой вектор $h$ из множества
+ $\mathfrak{C}$, который является наиболее близким к вектору измерений $y$ в
+ смысле евклидовой метрики. Если $y \in \mathfrak{C}$, то $\widehat{h}_{C} = y$,
+ в противном случае оценка $\widehat{h}_{C}$ может быть найдена методами
+ квадратичного программирования.
 \end{flushleft}
 
 \begin{flushleft}
- \
+ \textbf{Минимаксовый алгоритм}. Данный алгоритм предназначен для построения
+ оценки тела в случае, если заранее известно, что оно представляет из себя тело
+ с гладкой повехностью.
 \end{flushleft}
 
 
