[DOC] thesis: continue minimax algorithm from PW

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -548,10 +548,32 @@ $$
 \begin{flushleft}
  \textbf{Минимаксовый алгоритм}. Данный алгоритм предназначен для построения
  оценки тела в случае, если заранее известно, что оно представляет из себя тело
- с гладкой повехностью.
+ с гладкой повехностью. Для этого строится такая оценка, которая
+ \textit{максимизирует минимальный радиус кривизны} тела. В такой формулировке
+ решение всегда будет неограниченным, поскольку многоугольники, вписанные в
+ концетрические окружности неограниченно возратающего радиуса, имеют
+ неограниченный дискретный радиус кривизны. Эту проблему можно решить, если
+ предположить, что статистические погрешности равномерно рапределены на отрезке
+ $[ - \gamma, \gamma]$. В таком случае каждый реального вектора не может
+ отстоять от измеренной величины больше чем на $\gamma$. Из этого следует, что
+ реальный вектор и, следовательно, вектор оценки должен содежаться в гиперкубе
+ 
+ $$
+ \mathfrak{B} = \{h \in \mathbb{R}^{M} |
+ y - [\gamma, \gamma, \ldots, \gamma]^{T} \leq h \leq
+ y + [\gamma, \gamma, \ldots, \gamma]^{T}\}
+ $$
 \end{flushleft}
 
+Таким образом, поскольку величины $\rho_{i} = - h^{T} c_{i}$ пропорциональны
+дискретным радиусам кривизны $r_{i}$, авторы статьи определяют минимаксную
+оценку как
 
+$$
+\widehat{h}_{MM} =
+\operatornamewithlimits{argmax}_{h \in \mathfrak{C} \cup \mathfrak{B}}
+\min_{i = 1, \ldots, M} ( - h^{T} c_{i})
+$$
 
 \section{Предлагаемый подход}
 
