[DOC] thesis: fix 1 spelling mistake

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -527,7 +527,7 @@ $$
 
 \begin{flushleft}
  \textbf{Алгоритм ближайшего набора}. В данном случае предполагается, что
- статистическая погрешности представляют собой гауссовы величины. В случае,
+ статистические погрешности представляют собой гауссовы величины. В случае,
  когда отсутствует какая-либо информация об оцениваемом объекте, следует строить
  оценку максимального правдоподобия вектора $h$ по вектору измерений $y$ при
  условии, что $h \in \mathfrak{C}$:
