[DOC] thesis: fix mistake in formula

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -571,7 +571,7 @@ $$
 
 $$
 \widehat{h}_{MM} =
-\operatornamewithlimits{argmax}_{h \in \mathfrak{C} \cup \mathfrak{B}}
+\operatornamewithlimits{argmax}_{h \in \mathfrak{C} \cap \mathfrak{B}}
 \min_{i = 1, \ldots, M} ( - h^{T} c_{i})
 $$
 
