[DOC] thesis: fix 1 mistake in formula

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -325,7 +325,7 @@ $$
 является правильным конусом, поскольку целиком сожержит в себе линейное
 подпространство размерности 2. Следовательно, опорный конус является декартвым
 произведением правильного конуса
-$\mathfrak{C}_{p} = {h \in \mathfrak{C} | h^{T} n_{1} = 0, h^{T} n_{2} = 0}$
+$\mathfrak{C}_{p} = \{h \in \mathfrak{C} | h^{T} n_{1} = 0, h^{T} n_{2} = 0\}$
 и ядра $\mathfrak{N}$ матрицы $C$. Соответственно, любой вектор, составленный из
 набора опорных чисел, является покомпонентной суммой ортогональных векторов
 $h_{p} \in \mathfrak{C}_{p}$ и $h_{n} \in \mathfrak{N}$:
