[DOC] thesis: begin rationale of minimax algorithm

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -575,6 +575,33 @@ $$
 \min_{i = 1, \ldots, M} ( - h^{T} c_{i})
 $$
 
+Решение этой задачи оптимизации может быть получено путем применения методов
+линейного программирования. Чтобы показать это, введем новую скалярную величину,
+удовлетворяющую следущим неравенствам:
+
+$$
+\mu \leq - h^{T} c_{i}, i = 1, \ldots, M
+$$
+
+Затем рассмотрим расширенные векторы
+$u = \left(
+\begin{array}{c}
+ h_{1} \\
+ h_{2} \\
+ \vdots \\
+ h_{M} \\
+ \mu \\
+\end{array}
+\right)$ и
+$ b = \left(\begin{array}{c}
+ 0 \\
+ 0 \\
+ \vdots \\
+ 0 \\
+ 1 \\
+\end{array}
+\right)$.
+
 \section{Предлагаемый подход}
 
 \newpage
