[DOC] thesis: end of minimax algorithm rationale

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -602,6 +602,30 @@ $ b = \left(\begin{array}{c}
 \end{array}
 \right)$.
 
+В таких обозначениях нетрудно заметить, что исходная задача может
+быть переформулирована как максимизация величины $u^{T} b$ относительно
+ограничений $\mu \leq - h^{T} c_{i}, i = 1, \ldots, M$. В такой формулировке и
+функционал и неравенства ограничений линейны и, следовательно, задача
+максимизации может быть решена методами линейного программирования.
+
+Данный алгоритм наделен одним неудачным свойством: как это часто случается при
+применении линейного программирования, решение задачи может быть не
+единственным. Очевидно, что, например, прибаление произвольного вектора из ядра
+$\mathfrak{N}$ матрицы $C$ не изменяет дискретные кривизны объекта и
+следовательно, и функционал, максимизирумый в алгоритме. Следовательно, можно
+утверждать, что решением задачи нахождения максиминной оценки является целое
+семейство объектов, полученных из исходного методом плоскопараллельных сдвигов в
+$\mathbb{R}^{2}$. Минимаксная оценка привязана к величинам, полученным из
+измерений только внутри гиперкуба $\mathfrak{B}$, и поэтому при увеличении
+$\gamma$ полученная минимаксная все меньше зависит от полученных из эксперимента
+данных.
+
+Поэтому минимаксный алгоритм всегда стремится построить многоугольник
+наибольшего размера в рамках допустимого гиперкуба, причем этот многоугольник
+всегда стремится к окружности. Такие результаты получаются даже если истиннное
+тело не обладает такими свойствами. Этот недостаток алгоритма послужил для
+авторов статьи мотивацией к разработки еще одного алгоритма.
+
 \section{Предлагаемый подход}
 
 \newpage
