[DOC] thesis: add shift-corrected methods

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -681,6 +681,26 @@ $$
 принадлежности гиперкубу $\mathfrak{B}$ может быть опущено и решение задачи
 является единственным.
 
+\subsubsection{Модификация алгоритмов, учитывающая информацию о абсолютном
+положении объекта}
+
+Предположим, что заранее известно, что центр масс вершин некоторог объекта
+расположен в точке $\overline{\nu}$. Тогда данная информация может быть также
+заложена в процесс восстановления многоугольника -- восстановленный
+многоугольник должен обладать таким же свойством. Данное условие может быть
+достигнуто просто путем расширения набора ограничений еще одним линейным
+равенством:
+
+$$
+N^{T} h = \frac{M}{2} \overline{\nu}
+$$
+
+Вследствие линейности данного уравнения внесение его в число ограничений либого
+из трех введенных выше алгоритмов не внесет качественных изменений в методы
+работы этих алгоритмов (линейное и квадратичное программирование). Эффект от
+добавления такого ограничения может быть довольно заметным.
+
+
 \section{Предлагаемый подход}
 
 \newpage
