[DOC] thesis: begin subsection about LKW article.

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -700,7 +700,12 @@ $$
 работы этих алгоритмов (линейное и квадратичное программирование). Эффект от
 добавления такого ограничения может быть довольно заметным.
 
+\newpage
+\subsection{Дальнейшие методы восстановления многоугольников и их приложения к
+задаче распознания цели по данным лазерного радара (по статье Lele, Kulkarni,
+Willsky)}
 
+\newpage
 \section{Предлагаемый подход}
 
 \newpage
