--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -703,7 +703,7 @@ $$
 добавления такого ограничения может быть довольно заметным.
 
 \newpage
-\subsection{Дальнейшие методы восстановления многоугольников и их приложения к
+\subsection{Методы восстановления многоугольников и их приложения к
 задаче распознания цели по данным лазерного радара (по статье Lele, Kulkarni,
 Willsky)}
 
