[DOC[ thesis: add bibitem for Lele's S. M. thesis

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
@@ -111,6 +111,15 @@
   year = 1996
 }
 
+@thesis{thesis/Lele90,
+  author = {A. S. Lele},
+  title = {Convex set reconstruction from support line measurements and its
+  application to to laser radar data, S. M. thesis. Massachusetts Institute of
+  Technology, Cambridge, Mass.},
+  year = {1990}
+}
+TODO: correct the place of publishing of Lele's B. S. Thesis.
+
 @article{journals/josaa/LeleKW92,
 author = {A. S. Lele and S. R. Kulkarni and A. S. Willsky},
 journal = {J. Opt. Soc. Am. A},
