[DOC] thesis: add reference to Lele's thesis

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -707,6 +707,11 @@ $$
 задаче распознания цели по данным лазерного радара (по статье Lele, Kulkarni,
 Willsky)}
 
+Дальнейшее развитие рассматриваемая проблема нашла в исследовании авторов Lele,
+Kulkarni и Willsky, которое было описано в статье
+\cite{journals/josaa/LeleKW92}. Более подробную информацию можно найти в
+дипломной работе Lele \cite{thesis/Lele90}.
+
 \newpage
 \section{Предлагаемый подход}
 
